atualizando pipeline - deploy.yml

--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -5,9 +5,9 @@ name: PipelineFlask
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "PROD" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "PROD" ]
 
 
 jobs:
